# toyoura-nagisa

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEMo.py  FASTMCP_TOOL_SOTA_STANDARD.md  GEMINI.md  README.md  SEARCH_ARCHITECTURE_SUMMARY.md  WARP.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py  test_auto_processing.py  test_background_command.py  test_background_ignores_timeout.py  test_file_mention.py  test_mcp_integration_simple.py  test_mcp_validation_error.py  test_pfc_command.py  test_pfc_full_simulation.py  test_pfc_hybrid_execution.py  test_pfc_return.py  test_pfc_script.py  test_pfc_script_execution.py  test_pfc_sdk.py  test_pfc_simple.py  test_pfc_workspace_sync.py  test_results_complex_search.md  test_script_timeout.py  test_timeout_error.py  test_todo_format.py  test_todo_integration.py  test_todo_reminder_periodic.py
.claude/: CLAUDE.local.md  NAGISA_GROWTH_DIARY.md  plan.md  (+3 more)
pfc-mcp/: README.md  pyproject.toml
pfc-mcp/pfc-bridge/: README.md  start_bridge.py
pfc-mcp/pfc-bridge/server/: __init__.py  server.py
pfc-mcp/pfc-bridge/server/execution/: script.py
pfc-mcp/pfc-bridge/server/handlers/: __init__.py  console_handlers.py  context.py  diagnostic_handlers.py  helpers.py  task_handlers.py  tasks.py  utilities.py  utility_handlers.py  workspace.py  workspace_handlers.py
pfc-mcp/pfc-bridge/server/services/: __init__.py  git_version.py
pfc-mcp/pfc-bridge/server/signals/: __init__.py  diagnostic.py  interrupt.py
pfc-mcp/pfc-bridge/server/tasks/: __init__.py  manager.py  persistence.py  task.py  task_base.py  task_types.py
pfc-mcp/pfc-bridge/server/utils/: __init__.py  file_buffer.py  response.py
pfc-mcp/pfc-bridge/workspace_template/: .gitignore  README.md
pfc-mcp/src/pfc_mcp/: __init__.py  config.py  formatting.py  server.py  utils.py
pfc-mcp/src/pfc_mcp/bridge/: __init__.py  client.py  task_manager.py
pfc-mcp/src/pfc_mcp/docs/: __init__.py  config.py
pfc-mcp/src/pfc_mcp/docs/adapters/: __init__.py  api_adapter.py  command_adapter.py
pfc-mcp/src/pfc_mcp/docs/commands/: __init__.py  formatter.py  loader.py  models.py
pfc-mcp/src/pfc_mcp/docs/models/: __init__.py  search_result.py
pfc-mcp/src/pfc_mcp/docs/python_api/: __init__.py  formatter.py  loader.py
pfc-mcp/src/pfc_mcp/docs/python_api/types/: __init__.py  contact.py
pfc-mcp/src/pfc_mcp/docs/query/: __init__.py  api_search.py  command_search.py
pfc-mcp/src/pfc_mcp/docs/references/: __init__.py  formatter.py  loader.py
pfc-mcp/src/pfc_mcp/docs/resources/command_docs/: generate_index.py  index.json
pfc-mcp/src/pfc_mcp/docs/resources/command_docs/commands/ball/: attribute.json  export.json  extra.json  free.json  generate.json  history.json  initialize.json  property.json  trace.json  tractions.json
pfc-mcp/src/pfc_mcp/docs/resources/python_sdk_docs/: index.json  itasca.json
pfc-mcp/src/pfc_mcp/docs/resources/references/contact-models/: linear.json  linearcbond.json  linearpbond.json  rrlinear.json
pfc-mcp/src/pfc_mcp/docs/resources/references/range-elements/: cylinder.json  extent.json  extra.json  fish.json  group.json  id.json  plane.json  polygon.json  position-x.json  position-y.json  position-z.json  position.json  rectangle.json  sphere.json
pfc-mcp/src/pfc_mcp/docs/search/: __init__.py  base.py  keyword_matcher.py
pfc-mcp/src/pfc_mcp/docs/search/engines/: __init__.py  base_engine.py  bm25_engine.py
pfc-mcp/src/pfc_mcp/docs/search/indexing/: __init__.py  bm25_indexer.py
pfc-mcp/src/pfc_mcp/docs/search/postprocessing/: __init__.py  component_consolidation.py  contact_consolidation.py
pfc-mcp/src/pfc_mcp/docs/search/preprocessing/: __init__.py  stopwords.py  tokenizer.py
pfc-mcp/src/pfc_mcp/docs/search/scoring/: __init__.py  bm25_scorer.py
pfc-mcp/src/pfc_mcp/scripts/: __init__.py  plot_capture.py
pfc-mcp/src/pfc_mcp/tools/: __init__.py  browse_commands.py  browse_python_api.py  browse_reference.py  capture_plot.py  check_task_status.py  error_messages.py  execute_code.py  execute_task.py  interrupt_task.py  list_tasks.py  query_command.py  query_python_api.py  task_formatting.py
pfc-mcp/tests/: test_phase2_tools.py  test_phase3_capture_plot.py  test_tool_contracts.py
pfc_workspace/: .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  TEST_GUIDE.md  TOOL_REFERENCE.md  config.example.py  config_example.py  pyproject.toml  start_server.py  start_server_background.py  start_simple.py  startup.pfc  test_ball_command.py  test_ball_generate.py  test_connection.py  test_create_ball.py  test_existing_model.py  test_full_workflow.py  test_pfc.py  test_status_check.py
pfc_workspace/analysis/: settling_log_history.json
pfc_workspace/pfc_server/: executor.py  main_thread_executor.py  script_executor.py  server.py  task_manager.py
pfc_workspace/scripts/: analyze_settling.py  get_ball_count.py  get_ball_ids.py  gravity_settling_damped.py  setup_settling_model.py  test_robustness.py
services/pfc-server/: .gitignore  README.md  pyproject.toml  start_server.py
services/pfc-server/server/: __init__.py  diagnostic_executor.py  git_version_manager.py  interrupt_manager.py  main_thread_executor.py  quick_console_manager.py  script_executor.py  server.py
services/pfc-server/server/execution/: __init__.py
services/pfc-server/server/executors/: __init__.py  diagnostic.py  main_thread.py  script.py
services/pfc-server/server/handlers/: __init__.py  console_handlers.py  context.py  diagnostic_handlers.py  helpers.py  task_handlers.py  utility_handlers.py  workspace_handlers.py
services/pfc-server/server/managers/: __init__.py  git_version.py  interrupt.py  quick_console.py  user_console.py
services/pfc-server/server/signals/: __init__.py  interrupt.py
services/pfc-server/server/task_manager/: __init__.py  manager.py  persistence.py  task_base.py  task_types.py
services/pfc-server/server/tasks/: __init__.py  manager.py
services/pfc-server/server/utils/: __init__.py  file_buffer.py  path_utils.py  response.py
services/pfc-server/workspace_template/: .gitignore  README.md
(+1342 files in other folders)
