[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ainagisa"
version = "0.1.0"
description = "AI Nagisa"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "yusong", email = "yusong.han.652@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "starlette>=0.46.2",
    "pydantic>=2.11.3",
    "pydantic-core>=2.33.1",
    "typing-extensions>=4.13.2",
    "typing-inspection>=0.4.0",
    "annotated-types>=0.7.0",
    "httpx>=0.28.1",
    "httpx-ws>=0.7.2",
    "httpcore>=1.0.8",
    "httptools>=0.6.4",
    "h11>=0.14.0",
    "websockets>=15.0.1",
    "wsproto>=1.2.0",
    "aiofiles>=23.1.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "fish-audio-sdk>=2025.4.2",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "timezonefinder>=6.2.0",
    "soundfile>=0.12.1",
    "trafilatura>=1.6.1",
    "beautifulsoup4>=4.12.0",
    "google-api-python-client>=2.134.0",
    "fastmcp>=2.8.0",
    "pathspec>=0.12.0",
    "emoji>=2.0.0",
    "email-validator>=2.1.0",
    "anyio>=4.9.0",
    "anthropic>=0.30.0",
    "sniffio>=1.3.1",
    "exceptiongroup>=1.2.2",
    "uvloop>=0.21.0",
    "watchfiles>=1.0.5",
    "certifi>=2025.1.31",
    "idna>=3.10",
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.0",
    "googlemaps>=4.10.0",
    "chromadb>=0.4.22",
    "pytest>=8.2.0",
    "google-genai>=1.25.0",
    "openai>=1.40.2",
    "mcp>=1.8.0",
    "mistralai>=0.5.1",
    "pydantic-settings>=2.10.1",
    "psutil>=7.0.0",
    "vllm>=0.8.0",
    "ollama>=0.5.0"
]

[project.urls]
Homepage = "https://github.com/yusong652/aiNagisa"
"Bug Tracker" = "https://github.com/yusong652/aiNagisa/issues"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
]

[project.optional-dependencies]
dev = [
    "github-cli",  # GitHub CLI for managing issues and PRs
] 
