[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toyoura-nagisa"
version = "0.1.0"
description = "Toyoura Nagisa - LLM-Driven PFC Simulation Assistant"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "yusong", email = "yusong.han.652@gmail.com" }
]
dependencies = [
    "fastapi>=0.120.0",
    "uvicorn[standard]>=0.38.0",
    "starlette>=0.49.0",
    "pydantic>=2.12.0",
    "pydantic-core>=2.41.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "annotated-types>=0.7.0",
    "httpx>=0.28.1",
    "httpx-ws>=0.8.0",
    "httpcore>=1.0.8",
    "httptools>=0.7.0",
    "h11>=0.14.0",
    "websockets>=15.0.1",
    "wsproto>=1.2.0",
    "aiofiles>=25.0.0",
    "aiohttp>=3.13.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "fish-audio-sdk>=2025.4.2",
    "numpy>=1.24.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "timezonefinder>=8.0.0",
    "soundfile>=0.12.1",
    "trafilatura>=1.6.1",
    "beautifulsoup4>=4.14.0",
    "google-api-python-client>=2.186.0",
    "fastmcp>=2.13.0",
    "pathspec>=0.12.0",
    "emoji>=2.15.0",
    "email-validator>=2.3.0",
    "anyio>=4.11.0",
    "anthropic>=0.72.0",
    "sniffio>=1.3.1",
    "exceptiongroup>=1.2.2",
    "uvloop>=0.22.0; sys_platform != 'win32'",
    "watchfiles>=1.1.0",
    "certifi>=2025.10.0",
    "idna>=3.11",
    "google-auth>=2.42.0",
    "google-auth-oauthlib>=1.2.0",
    "googlemaps>=4.10.0",
    "chromadb>=1.3.0",
    "pytest>=8.4.0",
    "google-genai>=1.47.0",
    "openai>=2.6.0",
    "mcp>=1.20.0",
    "mistralai>=1.9.0",
    "zai-sdk>=0.0.4",
    "pydantic-settings>=2.11.0",
    "psutil>=7.1.0",
    "vllm>=0.11.0; sys_platform != 'win32'",
    "ollama>=0.6.0",
    "mem0ai>=1.0.0",
    "matplotlib>=3.10.7",
]

[project.urls]
Homepage = "https://github.com/yusong652/toyoura-nagisa"
"Bug Tracker" = "https://github.com/yusong652/toyoura-nagisa/issues"

[tool.hatch.build.targets.wheel]
packages = ["packages/backend"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "tiktoken>=0.9.0",
]

[tool.uv.workspace]
members = [
    "packages/backend",
    "workspace/default/toyoura_nagisa_uv_workspace/toyoura-nagisa-uv-plot"
]
# Note: services/pfc-server is NOT a workspace member
# It runs in PFC's embedded Python environment with its own dependencies
# Install in PFC environment: pip install websockets==9.1

[project.optional-dependencies]
dev = [
    "github-cli",  # GitHub CLI for managing issues and PRs
] 
