[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toyoura-nagisa"
version = "0.1.0"
description = "Toyoura Nagisa - LLM-Driven PFC Simulation Assistant"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "yusong", email = "yusong.han.652@gmail.com" }
]
dependencies = [
    "fastapi>=0.120.0",
    "uvicorn[standard]>=0.38.0",
    "starlette>=0.49.0",
    "pydantic>=2.12.0",
    "pydantic-core>=2.41.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "annotated-types>=0.7.0",
    "httpx>=0.28.1",
    "httpx-ws>=0.8.0",
    "httpcore>=1.0.8",
    "httptools>=0.7.0",
    "h11>=0.14.0",
    "websockets>=15.0.1",
    "wsproto>=1.2.0",
    "aiofiles>=25.0.0",
    "aiohttp>=3.13.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "fish-audio-sdk>=2025.4.2",
    "numpy>=1.24.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "timezonefinder>=8.0.0",
    "soundfile>=0.12.1",
    "trafilatura>=1.6.1",
    "beautifulsoup4>=4.14.0",
    "google-api-python-client>=2.186.0",
    "fastmcp>=2.14.0",
    "pathspec>=0.12.0",
    "emoji>=2.15.0",
    "anyio>=4.11.0",
    "anthropic>=0.72.0",
    "sniffio>=1.3.1",
    "exceptiongroup>=1.2.2",
    "uvloop>=0.22.0; sys_platform != 'win32'",
    "watchfiles>=1.1.0",
    "certifi>=2025.10.0",
    "idna>=3.11",
    "google-auth>=2.42.0",
    "google-auth-oauthlib>=1.2.0",
    "googlemaps>=4.10.0",
    "chromadb>=1.3.0",
    "pytest>=8.4.0",
    "google-genai>=1.50.0",
    "openai>=2.6.0",
    "mcp>=1.20.0",
    "mistralai>=1.9.0",
    "zai-sdk>=0.0.4",
    "pydantic-settings>=2.11.0",
    "psutil>=7.1.0",
    "vllm>=0.11.0; sys_platform != 'win32'",
    "ollama>=0.6.0",
    "mem0ai>=1.0.0",
    "matplotlib>=3.10.7",
]

[project.urls]
Homepage = "https://github.com/yusong652/toyoura-nagisa"
"Bug Tracker" = "https://github.com/yusong652/toyoura-nagisa/issues"

[tool.hatch.build.targets.wheel]
packages = ["packages/backend"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "tiktoken>=0.9.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[tool.uv.workspace]
members = [
    "packages/backend",
]
# pfc-mcp is now a standalone repository: https://github.com/yusong652/pfc-mcp

[project.optional-dependencies]
dev = [
    "github-cli",  # GitHub CLI for managing issues and PRs
]

# Ruff configuration
[tool.ruff]
# Python version
target-version = "py310"

# Line length
line-length = 120

# Directories to exclude
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    "node_modules",
    "_third_party",
]

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), and isort (I)
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function call in argument defaults
    "C901",  # Function is too complex
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use \n line endings
line-ending = "lf"

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing - set to true later
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_optional = true

# Per-module options (stricter for domain layer)
[[tool.mypy.overrides]]
module = "backend.domain.*"
disallow_untyped_defs = true
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = "backend.tests.*"
ignore_errors = true
