[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfc-mcp"
version = "0.1.0"
description = "ITASCA PFC discrete element simulation MCP server"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.0",
    "pydantic>=2.12.0",
    "websockets>=15.0.1",
]

[project.scripts]
pfc-mcp = "pfc_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pfc_mcp"]
